--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   path: ^1.8.3
   plugin_platform_interface: ^2.1.8
   visibility_detector: ^0.4.0+2
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
